# nokken-forecasting

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  SCHEMA_COMPAT.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  nokken-forecasting-forecast.service  nokken-forecasting-forecast.timer
docs/: forcing-requirements.md  phase3-scoping.md  queries.md  scoping-genesis.md  shyft-investigation.md
scripts/: recession_diagnose.py
src/nokken_forecasting/: __init__.py  cli.py  config.py  logging.py
src/nokken_forecasting/baselines/: __init__.py  persistence.py  recession.py
src/nokken_forecasting/db/: inspect.py  postgres.py
src/nokken_forecasting/hindcast/: __init__.py  harness.py
src/nokken_forecasting/jobs/: __init__.py  forecast_job.py
src/nokken_forecasting/queries/: __init__.py  _connection.py  _frame.py  gauges.py  observations.py  sections.py  weather.py
src/nokken_forecasting/writers/: __init__.py  _connection.py  forecasts.py
tests/: test_smoke.py
tests/integration/: conftest.py  test_db_smoke.py  test_inspect.py
tests/integration/hindcast/: conftest.py  test_harness.py
tests/integration/jobs/: conftest.py  test_forecast_job.py
tests/integration/queries/: conftest.py  test_readers.py
tests/integration/writers/: conftest.py  test_forecasts.py
tests/unit/: test_cli.py  test_inspect_validators.py  test_recession_diagnose.py
tests/unit/baselines/: test_persistence.py  test_recession.py
tests/unit/hindcast/: test_harness.py
tests/unit/jobs/: test_forecast_job.py
tests/unit/queries/: conftest.py  (+4 more)
