[project]
name = "nokken-forecasting"
version = "0.0.1"
description = "nokken.net river flow / level forecasting — short-horizon forecasts for paddling sections"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[project.scripts]
nokken-forecasting = "nokken_forecasting.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nokken_forecasting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
